--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fac7c82",
+   "id": "ba9f4ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,508 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d739fcc",
+   "metadata": {},
+   "source": [
+    "## 2 A) How to work with missing data?\n",
+    "\n",
+    "we can work with missing data in many ways but most common approaches are\n",
+    "<center><b>i)Removing Missing Data</b></center>\n",
+    "<center><b>ii)Modifying The Missing Data</b></center>\n",
+    "we can modify the data by replacing the missing value, with it's central tendency, such as mean, median, mode\n",
+    "this depends on whether the data is nominal, ordinal, interval or ratio\n",
+    "we can choose either filling the missing data with measure of central tendency or use ffill or bfill or use Imputation i.e fillna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e30c5c7e",
+   "metadata": {},
+   "source": [
+    "## B) Write a Python code to perform Data pre-processing task on given dataset\n",
+    "pre-process_datasample.csv (eg. Checking and Handling Missing Data, handling inappropriate data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0c454b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>France</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>52000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>79000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>83000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>67000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country   Age   Salary Purchased\n",
+       "0   France  44.0  72000.0        No\n",
+       "1    Spain  27.0  48000.0       Yes\n",
+       "2  Germany  30.0  54000.0        No\n",
+       "3    Spain  38.0  61000.0        No\n",
+       "4  Germany  40.0      NaN       Yes\n",
+       "5   France  35.0  58000.0       Yes\n",
+       "6    Spain   NaN  52000.0        No\n",
+       "7   France  48.0  79000.0       Yes\n",
+       "8      NaN  50.0  83000.0        No\n",
+       "9   France  37.0  67000.0       Yes"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"pre-process_datasample.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a27c2c7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4     True\n",
+       "5    False\n",
+       "6     True\n",
+       "7    False\n",
+       "8     True\n",
+       "9    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#print true if you find any missing data according to row wise\n",
+    "df.isna().any(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f886d6e3",
+   "metadata": {},
+   "source": [
+    "## Method-1 : Dropping Missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b2b3b305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_01 = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "98f97b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>France</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>79000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>67000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country   Age   Salary Purchased\n",
+       "0   France  44.0  72000.0        No\n",
+       "1    Spain  27.0  48000.0       Yes\n",
+       "2  Germany  30.0  54000.0        No\n",
+       "3    Spain  38.0  61000.0        No\n",
+       "5   France  35.0  58000.0       Yes\n",
+       "7   France  48.0  79000.0       Yes\n",
+       "9   France  37.0  67000.0       Yes"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff842a2",
+   "metadata": {},
+   "source": [
+    "## Method-2: Modify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f07f4ae8",
+   "metadata": {},
+   "source": [
+    "#### We can see that Country is an ordinal data type so we can only perform Mode operation to replace it\n",
+    "We can also see that Salary, Age is an continuous data, we can either proceed with mean or median, prefer median when there are too many outliers, when standard deviation is too high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bc4b182f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace with mean for salary and age\n",
+    "\n",
+    "df_02 = df.fillna({\n",
+    "    'Age':df['Age'].mean(),\n",
+    "    'Salary':df['Salary'].mean(),\n",
+    "    'Country' : df['Country'].mode()[0]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1600c39d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>72000.000000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>48000.000000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>54000.000000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>61000.000000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>63777.777778</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>France</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>58000.000000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.777778</td>\n",
+       "      <td>52000.000000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>79000.000000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>France</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>83000.000000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>67000.000000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country        Age        Salary Purchased\n",
+       "0   France  44.000000  72000.000000        No\n",
+       "1    Spain  27.000000  48000.000000       Yes\n",
+       "2  Germany  30.000000  54000.000000        No\n",
+       "3    Spain  38.000000  61000.000000        No\n",
+       "4  Germany  40.000000  63777.777778       Yes\n",
+       "5   France  35.000000  58000.000000       Yes\n",
+       "6    Spain  38.777778  52000.000000        No\n",
+       "7   France  48.000000  79000.000000       Yes\n",
+       "8   France  50.000000  83000.000000        No\n",
+       "9   France  37.000000  67000.000000       Yes"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2ee45760",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    France\n",
+       "Name: Country, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:, 0].mode()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "342d15cf",
+   "id": "7a4d3f74",
    "metadata": {},
    "outputs": [],
    "source": []
